lib/src/ffi/native_asset_bindings.dart

// Generated @Native FFI bindings for OpenTUI from external/opentui/packages/go/opentui.h.
// Regenerate with: dart run ffigen --config ffigen_native_assets.yaml
// Do not edit manually.
// ignore_for_file: unused_element, unused_field

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:noir/src/ffi/native_asset_bindings.dart')
library;

import 'dart:ffi' as ffi;

/// Dart package ABI validation functions
@ffi.Native<ffi.Uint32 Function()>()
external int otui_dart_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> otui_dart_build_info();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> otui_dart_last_error();

@ffi.Native<ffi.Void Function()>()
external void otui_dart_clear_error();

/// Renderer management functions
@ffi.Native<
  ffi.Pointer<CliRenderer> Function(ffi.Uint32, ffi.Uint32, ffi.Bool)
>()
external ffi.Pointer<CliRenderer> createRenderer(
  int width,
  int height,
  bool testing,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Bool)>()
external void setUseThread(ffi.Pointer<CliRenderer> renderer, bool useThread);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Bool, ffi.Uint32)>()
external void destroyRenderer(
  ffi.Pointer<CliRenderer> renderer,
  bool useAlternateScreen,
  int splitHeight,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Pointer<ffi.Float>)
>()
external void setBackgroundColor(
  ffi.Pointer<CliRenderer> renderer,
  ffi.Pointer<ffi.Float> color,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Uint32)>()
external void setRenderOffset(ffi.Pointer<CliRenderer> renderer, int offset);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<CliRenderer>,
    ffi.Double,
    ffi.Uint32,
    ffi.Double,
  )
>()
external void updateStats(
  ffi.Pointer<CliRenderer> renderer,
  double time,
  int fps,
  double frameCallbackTime,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<CliRenderer>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external void updateMemoryStats(
  ffi.Pointer<CliRenderer> renderer,
  int heapUsed,
  int heapTotal,
  int arrayBuffers,
);

@ffi.Native<ffi.Pointer<OptimizedBuffer> Function(ffi.Pointer<CliRenderer>)>()
external ffi.Pointer<OptimizedBuffer> getNextBuffer(
  ffi.Pointer<CliRenderer> renderer,
);

@ffi.Native<ffi.Pointer<OptimizedBuffer> Function(ffi.Pointer<CliRenderer>)>()
external ffi.Pointer<OptimizedBuffer> getCurrentBuffer(
  ffi.Pointer<CliRenderer> renderer,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Bool)>()
external void render(ffi.Pointer<CliRenderer> renderer, bool force);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Uint32, ffi.Uint32)
>()
external void resizeRenderer(
  ffi.Pointer<CliRenderer> renderer,
  int width,
  int height,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Bool)>()
external void enableMouse(
  ffi.Pointer<CliRenderer> renderer,
  bool enableMovement,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>)>()
external void disableMouse(ffi.Pointer<CliRenderer> renderer);

/// Buffer management functions
@ffi.Native<
  ffi.Pointer<OptimizedBuffer> Function(
    ffi.Uint32,
    ffi.Uint32,
    ffi.Bool,
    ffi.Uint8,
  )
>()
external ffi.Pointer<OptimizedBuffer> createOptimizedBuffer(
  int width,
  int height,
  bool respectAlpha,
  int widthMethod,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<OptimizedBuffer>)>()
external void destroyOptimizedBuffer(ffi.Pointer<OptimizedBuffer> buffer);

@ffi.Native<ffi.Void Function(ffi.Pointer<OptimizedBuffer>)>()
external void destroyFrameBuffer(ffi.Pointer<OptimizedBuffer> frameBuffer);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<OptimizedBuffer>)>()
external int getBufferWidth(ffi.Pointer<OptimizedBuffer> buffer);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<OptimizedBuffer>)>()
external int getBufferHeight(ffi.Pointer<OptimizedBuffer> buffer);

/// Buffer drawing functions
@ffi.Native<
  ffi.Void Function(ffi.Pointer<OptimizedBuffer>, ffi.Pointer<ffi.Float>)
>()
external void bufferClear(
  ffi.Pointer<OptimizedBuffer> buffer,
  ffi.Pointer<ffi.Float> bg,
);

@ffi.Native<ffi.Pointer<ffi.Uint32> Function(ffi.Pointer<OptimizedBuffer>)>()
external ffi.Pointer<ffi.Uint32> bufferGetCharPtr(
  ffi.Pointer<OptimizedBuffer> buffer,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<OptimizedBuffer>)>()
external ffi.Pointer<ffi.Float> bufferGetFgPtr(
  ffi.Pointer<OptimizedBuffer> buffer,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<OptimizedBuffer>)>()
external ffi.Pointer<ffi.Float> bufferGetBgPtr(
  ffi.Pointer<OptimizedBuffer> buffer,
);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<OptimizedBuffer>)>()
external ffi.Pointer<ffi.Uint8> bufferGetAttributesPtr(
  ffi.Pointer<OptimizedBuffer> buffer,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<OptimizedBuffer>)>()
external bool bufferGetRespectAlpha(ffi.Pointer<OptimizedBuffer> buffer);

@ffi.Native<ffi.Void Function(ffi.Pointer<OptimizedBuffer>, ffi.Bool)>()
external void bufferSetRespectAlpha(
  ffi.Pointer<OptimizedBuffer> buffer,
  bool respectAlpha,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<OptimizedBuffer>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Uint8,
  )
>()
external void bufferDrawText(
  ffi.Pointer<OptimizedBuffer> buffer,
  ffi.Pointer<ffi.Uint8> text,
  int textLen,
  int x,
  int y,
  ffi.Pointer<ffi.Float> fg,
  ffi.Pointer<ffi.Float> bg,
  int attributes,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<OptimizedBuffer>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Uint8,
  )
>()
external void bufferSetCellWithAlphaBlending(
  ffi.Pointer<OptimizedBuffer> buffer,
  int x,
  int y,
  int char_code,
  ffi.Pointer<ffi.Float> fg,
  ffi.Pointer<ffi.Float> bg,
  int attributes,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<OptimizedBuffer>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Float>,
  )
>()
external void bufferFillRect(
  ffi.Pointer<OptimizedBuffer> buffer,
  int x,
  int y,
  int width,
  int height,
  ffi.Pointer<ffi.Float> bg,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<OptimizedBuffer>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external void bufferDrawPackedBuffer(
  ffi.Pointer<OptimizedBuffer> buffer,
  ffi.Pointer<ffi.Uint8> data,
  int dataLen,
  int posX,
  int posY,
  int terminalWidthCells,
  int terminalHeightCells,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<OptimizedBuffer>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Uint8,
    ffi.Uint32,
  )
>()
external void bufferDrawSuperSampleBuffer(
  ffi.Pointer<OptimizedBuffer> buffer,
  int x,
  int y,
  ffi.Pointer<ffi.Uint8> pixelData,
  int len,
  int format,
  int alignedBytesPerRow,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<OptimizedBuffer>,
    ffi.Int32,
    ffi.Int32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint32>,
    ffi.Uint32,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
  )
>()
external void bufferDrawBox(
  ffi.Pointer<OptimizedBuffer> buffer,
  int x,
  int y,
  int width,
  int height,
  ffi.Pointer<ffi.Uint32> borderChars,
  int packedOptions,
  ffi.Pointer<ffi.Float> borderColor,
  ffi.Pointer<ffi.Float> backgroundColor,
  ffi.Pointer<ffi.Uint8> title,
  int titleLen,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<OptimizedBuffer>, ffi.Uint32, ffi.Uint32)
>()
external void bufferResize(
  ffi.Pointer<OptimizedBuffer> buffer,
  int width,
  int height,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<OptimizedBuffer>,
    ffi.Int32,
    ffi.Int32,
    ffi.Pointer<OptimizedBuffer>,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external void drawFrameBuffer(
  ffi.Pointer<OptimizedBuffer> target,
  int destX,
  int destY,
  ffi.Pointer<OptimizedBuffer> frameBuffer,
  int sourceX,
  int sourceY,
  int sourceWidth,
  int sourceHeight,
);

/// Cursor functions
@ffi.Native<
  ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Int32, ffi.Int32, ffi.Bool)
>()
external void setCursorPosition(
  ffi.Pointer<CliRenderer> renderer,
  int x,
  int y,
  bool visible,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<CliRenderer>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Bool,
  )
>()
external void setCursorStyle(
  ffi.Pointer<CliRenderer> renderer,
  ffi.Pointer<ffi.Uint8> style,
  int styleLen,
  bool blinking,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Pointer<ffi.Float>)
>()
external void setCursorColor(
  ffi.Pointer<CliRenderer> renderer,
  ffi.Pointer<ffi.Float> color,
);

/// Terminal capability functions
@ffi.Native<
  ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Pointer<Capabilities>)
>()
external void getTerminalCapabilities(
  ffi.Pointer<CliRenderer> renderer,
  ffi.Pointer<Capabilities> caps,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external void processCapabilityResponse(
  ffi.Pointer<CliRenderer> renderer,
  ffi.Pointer<ffi.Uint8> response,
  int responseLen,
);

/// Debug and utility functions
@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Bool, ffi.Uint8)>()
external void setDebugOverlay(
  ffi.Pointer<CliRenderer> renderer,
  bool enabled,
  int corner,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>)>()
external void clearTerminal(ffi.Pointer<CliRenderer> renderer);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<CliRenderer>,
    ffi.Int32,
    ffi.Int32,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external void addToHitGrid(
  ffi.Pointer<CliRenderer> renderer,
  int x,
  int y,
  int width,
  int height,
  int id,
);

@ffi.Native<
  ffi.Uint32 Function(ffi.Pointer<CliRenderer>, ffi.Uint32, ffi.Uint32)
>()
external int checkHit(ffi.Pointer<CliRenderer> renderer, int x, int y);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>)>()
external void dumpHitGrid(ffi.Pointer<CliRenderer> renderer);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Int64)>()
external void dumpBuffers(ffi.Pointer<CliRenderer> renderer, int timestamp);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Int64)>()
external void dumpStdoutBuffer(
  ffi.Pointer<CliRenderer> renderer,
  int timestamp,
);

/// Keyboard and terminal setup functions
@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Uint8)>()
external void enableKittyKeyboard(ffi.Pointer<CliRenderer> renderer, int flags);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>)>()
external void disableKittyKeyboard(ffi.Pointer<CliRenderer> renderer);

@ffi.Native<ffi.Void Function(ffi.Pointer<CliRenderer>, ffi.Bool)>()
external void setupTerminal(
  ffi.Pointer<CliRenderer> renderer,
  bool useAlternateScreen,
);

/// TextBuffer functions
@ffi.Native<ffi.Pointer<TextBuffer> Function(ffi.Uint32, ffi.Uint8)>()
external ffi.Pointer<TextBuffer> createTextBuffer(int length, int widthMethod);

@ffi.Native<ffi.Void Function(ffi.Pointer<TextBuffer>)>()
external void destroyTextBuffer(ffi.Pointer<TextBuffer> textBuffer);

@ffi.Native<ffi.Pointer<ffi.Uint32> Function(ffi.Pointer<TextBuffer>)>()
external ffi.Pointer<ffi.Uint32> textBufferGetCharPtr(
  ffi.Pointer<TextBuffer> textBuffer,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<TextBuffer>)>()
external ffi.Pointer<ffi.Float> textBufferGetFgPtr(
  ffi.Pointer<TextBuffer> textBuffer,
);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<TextBuffer>)>()
external ffi.Pointer<ffi.Float> textBufferGetBgPtr(
  ffi.Pointer<TextBuffer> textBuffer,
);
